<resources>
    <string name="app_name">CRUD App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bethanie_danielle_pablico">Bethanie Danielle Pablico</string>
    <string name="student_data_app">Student Data App</string>
    <string name="name">Name</string>
    <string name="section">Section</string>
    <string name="course">Course</string>
    <string name="year">Year</string>
    <string name="create">Create</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="create_student_data">Create Student Data</string>
    <string name="student_name">Student Name</string>
    <string name="student_section">Student Section</string>
    <string name="student_course">Student Course</string>
    <string name="student_year">Student Year</string>
    <string name="cancel">Cancel</string>
</resources>